recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:6: error: not found: value liste
  else return liste
              ^